--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,26 @@ title: GrowthGO   #网站标题
 subTitle: 快速搭建专属于自己的导航网站，首屏加载速度快，SEO友好，UI美观、简洁
 avatar: '/logo.png'
 
+# 首页快速访问卡片
+quickAccess:
+  - name: vue
+    description: 易学易用，性能出色，适用场景丰富的 Web 前端框架
+    icon: https://cn.vuejs.org/logo.svg
+    url: https://cn.vuejs.org/
+  - name: nodeJS
+    description: Node.js 是一个开源的、跨平台的 JavaScript 运行时环境
+    icon: https://nodejs.cn/favicon.svg
+    url: https://nodejs.cn/
+  - name: npm
+    description: Build amazing things
+    icon: https://static-production.npmjs.com/b0f1a8318363185cc2ea6a40ac23eeb2.png
+    url: https://www.npmjs.com/
+  - name: github
+    description: 全球最大的开发者平台
+    icon: https://github.githubassets.com/favicons/favicon.svg
+    url: https://github.com/
+
+# 首页底部的友情链接
 friendLink:
   - name: Gridsome
     url: https://gridsome.org/
