--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "element-ui": "^2.15.14",
     "gridsome": "^0.7.0",
     "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "babel-plugin-component": "^1.1.1"
   }
 }
