--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: GrowthGO   #网站标题
-subTitle: 快速搭建专属于自己的导航网站，首屏加载速度快，SEO友好，UI美观、简洁
+subTitle: 快速搭建专属于自己的导航网站，采用响应式设计，适应任何尺寸，以及首屏加载速度快，SEO友好，UI美观、简洁
 avatar: '/logo.png'
 
 # 首页快速访问卡片
