--- a/config.yaml
+++ b/config.yaml
@@ -33,3 +33,7 @@ friendLink:
     url: https://www.iconfont.cn/
   - name: myBlog
     url: https://consolelz.github.io/
+
+
+# 网站上线时间（这个会展示在统计页面的运行时长那里, 注意格式：xxxx-xx-xx xx:xx）
+onlineTime: 2024-11-04 11:26
