--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,8 @@ friendLink:
     url: https://iconpark.oceanengine.com/
   - name: IconFont
     url: https://www.iconfont.cn/
+  - name: 不蒜子
+    url: https://busuanzi.ibruce.info/
   - name: myBlog
     url: https://consolelz.github.io/
 
