--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "element-ui": "^2.15.14",
     "gridsome": "^0.7.0",
     "js-yaml": "^4.1.0"
