--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "echarts": "^6.0.0",
     "element-ui": "^2.15.14",
     "gridsome": "^0.7.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "minisearch": "^7.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
