--- a/config.yaml
+++ b/config.yaml
@@ -42,4 +42,7 @@ friendLink:
 
 
 # 网站上线时间（这个会展示在统计页面的运行时长那里, 注意格式：xxxx-xx-xx xx:xx）
-onlineTime: 2025-11-07 18:00:00
+onlineTime: 2025-11-07
+
+# 分页时每一页展示的数量
+paginationValue: 10
